_sass/_layout.scss
body {
	margin: 0;
	color: $font-color;
	font-family: $font-style;
	font-size: 1.1em;
	line-height: 1.5;
	-webkit-font-smoothing: antialiased;
}
header {
	background: $header;
	padding: 0px 15px;
	text-align: center;
	margin: 50px 0 0;
	height: 50vh;
	display: flex;
	align-items: center;
}
.main {
	padding: 0 15px;
	max-width: $content-width;
	margin: 0 auto;
}
time {
	color: #898989;
}
a,
a:visited {
	color: $link-color;
	text-decoration: underline;
	font-weight: bold;
  transition: all .4s ease-in-out;
}
a:hover {
	color: $link-hover-color;
	text-decoration: underline;
  transform: scale(1.1);
}
.thumbnail {
	height: 150px;
	width: 150px;
	border-radius: 50%;
}
.img-resposive {
	width: 100%;
}
.text-center {
	text-align: center;
}
.lead {
	color: #8d8d8d;
}
.post {
	font-weight: 300;
	color: #8d8d8d;
}
.center {
	text-align: center;
}
.center-img {
	display: block;
	margin: 0 auto;
}
.journal-img {
	display: flex;
	max-width: 250px;
	max-height: 250px;
	margin: 20px auto;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
.hero {
	background: url(../journal-hero.jpg) no-repeat center center;
	background-size: cover;
}
.social-icons {
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	font-size: 1.5em;
	margin: 1em 0;
}

footer {
	text-align: center;
	padding: 40px;
	color: $white;
	background-color: $primary;
	.fa-heart {
		color: #e74c3c;
	}
}

article {
	h2 {
		margin-bottom: 0;
	}
	h4 {
		margin-top: 0;
	margin-bottom: 10px;
	}
}

span {
	display: flex;
	justify-content: center;
}
.journal-about {
	display: flex;
	flex-direction: column;
}
.status-yes {
	color: #2ecc71;
	display: inline-flex;
}
.status-no {
	color: #c0392b;
	display: inline-flex;
}
.email {
	margin: 1em 0;
	font-size: 1.5em;
}

.name-box {
	background-color: $light;
	padding: 10px 40px;
	margin-left: 80px;
	h1 {
		margin: 0;
		font-weight: 700;
		letter-spacing: 2px;
	}
}

#projects {
	background-color: #f7f7f7;
	color: $font-color;
	text-align: center;
	.shadow {
		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
	}
}
.gabe-message {
	background-color: $primary;
	color: $light;
	text-align: center;
	padding: 40px 0;
	#wild {
		color: $light;
		font-weight: 700;
		line-height: 1.1;
		font-size: 1.375em;
		letter-spacing: 0;
		text-transform: uppercase;
		margin-top: 0;
	}
	p {
		font-size: .688em;
    	font-weight: 300;
    	text-transform: uppercase;
		letter-spacing: 7px;
		margin-bottom: 0;
	}
}
@media (max-width: 567px) {
	.name-box {
		margin: 0 auto;
		padding: 10px;
		h1 {
			font-size: 2em;
		}
	}
	.gabe-message {
		#wild {
			font-size: 1.1em;
		}
		p {
			font-size: .6em;
		}
	}
}

